--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
         "when": "2.5.1"
     },
     "optionalDependencies": {
-        "mysql": "2.0.0-alpha9",
-        "pg": "~2.6.2"
+        "mysql": "2.0.0-alpha9"
     },
     "devDependencies": {
         "blanket": "~1.1.5",
