Serving static assets via asset-rack
closes #1405
- adds asset-rack to package for serving assets
- moves all assets previously served via express.static into an asset rack
- handles url generation for statically served assets
- updates the asset-helper for hbs-templates to get the right url
- allows configuration of local-asstets-deployment directory and CDN

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     },
     "engineStrict": true,
     "dependencies": {
+        "asset-rack": "2.2.2",
+        "async": "0.2.9",
         "bcryptjs": "0.7.10",
         "bookshelf": "0.6.1",
         "busboy": "0.0.12",
