--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ translations:
     themes:       '主题'
     translations: '翻译'
     help:         '帮助'
+    faq:          'FAQ'
   ko:
     site_title:   'Ghost Guide'
     installation: 'Installation'
@@ -35,6 +36,7 @@ translations:
     themes:       'Themes'
     translations: 'Translations'
     help:         'Help'
+    faq:          'FAQ'
   de:
     site_title:   'Ghost-Handbuch'
     installation: 'Installation'
@@ -45,6 +47,7 @@ translations:
     deploy:       'Einsetzen'
     upgrading:    'Aktualisieren' 
     troubleshooting: 'Problembehebung'
+    faq:          'FAQ'
   fr:
     site_title:   'Guide Ghost'
     installation: 'Installation'
@@ -53,6 +56,7 @@ translations:
     themes:       'Thèmes'
     translations: 'Traductions'
     help:         'Aide'
+    faq:          'FAQ'
   pl:
     site_title:   'Ghost Guide'
     installation: 'Installation'
@@ -61,6 +65,7 @@ translations:
     themes:       'Themes'
     translations: 'Translations'
     help:         'Help'
+    faq:          'FAQ'
 
 # If running locally, simply comment out the line below to make all urls relative
 
