--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "test": "grunt validate --verbose"
     },
     "engines": {
-        "node": "0.10.*"
+        "node": "~0.10.0"
     },
     "engineStrict": true,
     "dependencies": {
