--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "request": "~2.29.0",
         "require-dir": "~0.1.0",
         "should": "~2.1.1",
-        "sinon": "~1.7.3"
+        "sinon": "~1.7.3",
+        "supertest": "~0.8.2"
     }
 }
