--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
         "grunt-contrib-sass": "~0.5.0",
         "grunt-contrib-uglify": "~0.2.5",
         "grunt-contrib-watch": "~0.5.3",
-        "grunt-express-server": "~0.4.5",
+        "grunt-express-server": "~0.4.11",
         "grunt-groc": "~0.4.0",
         "grunt-jslint": "~1.1.1",
         "grunt-mocha-cli": "~1.4.0",
@@ -81,6 +81,7 @@
         "request": "~2.29.0",
         "require-dir": "~0.1.0",
         "should": "~2.1.1",
-        "sinon": "~1.7.3"
+        "sinon": "~1.7.3",
+        "supertest": "~0.8.2"
     }
 }
