--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ markdown: redcarpet
 languages:
     - name: 'English'
       key: 'en'
+    - name: '繁體中文'
+      key: 'zh_TW'
     - name: '中文'
       key: 'zh'
     - name: '한국의'
@@ -23,6 +25,14 @@ languages:
 port:         4478
 
 translations:
+  zh_TW:
+    site_title:   'Ghost 使用手冊'
+    installation: '安裝'
+    usage:        '使用方法'
+    email:        '電子郵件'
+    themes:       '佈景主題'
+    translations: '翻譯'
+    help:         '說明'
   zh:
     site_title:   'Ghost使用指南'
     installation: '安装'
