Updated _config.yml file
the world "korean " was mistranslated.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ languages:
       key: 'en'
     - name: '中文'
       key: 'zh'
-    - name: '한국의'
+    - name: '한국어'
       key: 'ko'
     - name: 'Deutsch'
       key: 'de'
