[Translations: /de] usage menu and corrections
Finally translated the usage menu section and corrected a mistake I made
a few commits back

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,11 @@ translations:
     deploy:       'Einsetzen'
     upgrading:    'Aktualisieren' 
     troubleshooting: 'Problembehebung'
+    configuration: 'Konfiguration'
+    faq: 'FAQ'
+    managing: 'Verwalten'
+    settings: 'Einstellungen'
+    writing: 'Schreiben'
   fr:
     site_title:   'Guide Ghost'
     installation: 'Installation'
