Ignore Ghost folders when building the docs
A fix to stop having to remove `node_modules`, `core`, `content` Ghost folders when building the docs.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 pygments:     true
 permalinks: pretty
 relative_permalinks: false
+exclude:     ['node_modules', 'core', 'content']
 markdown: redcarpet
 languages:
     - name: 'English'
