Add some simplified chinese (zh) translations in _config.yml Fully Translate quickstart/quickstart.md to simplified chinese (zh) Translate a little part of themes/index.md to simplified chinese (zh)

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,14 @@ translations:
     themes:       '主题'
     translations: '翻译'
     help:         '帮助'
+    deploy:       '部署'
+    upgrading:    '升级'
+    troubleshooting: '纠错 & 常见问题'
+    configuration: '配置'
+    faq:          'FAQ'
+    managing:     '博客管理'
+    settings:     '博客设置'
+    writing:      '写作'
   ko:
     site_title:   'Ghost Guide'
     installation: 'Installation'
