--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"        : "ghost",
-    "version"     : "0.4.0",
+    "version"     : "0.4.1-rc1",
     "description" : "Just a blogging platform.",
     "author"      : "Ghost Foundation",
     "homepage"    : "http://ghost.org",
