--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ translations:
     managing:     '博客管理'
     settings:     '博客设置'
     writing:      '写作'
+    back:         '上一章'
+    next:         '下一章'
   ko:
     site_title:   'Ghost Guide'
     installation: 'Installation'
