Still doesn't work.

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -20,6 +20,9 @@
         "description": {
             "defaultValue": "Just a blogging platform."
         },
+        "customSiteHtml": {
+            "defaultValue": ""
+        },
         "email": {
             "defaultValue": "ghost@example.com",
             "validations": {
