--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "semver": "2.2.1",
         "showdown": "0.3.1",
         "sqlite3": "2.1.19",
-        "underscore": "1.5.2",
+        "lodash": "2.4.1",
         "unidecode": "0.1.3",
         "validator": "1.4.0",
         "when": "2.7.0"
