start hungarian tranlation

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ languages:
       key: 'it'
     - name: '繁體中文'
       key: 'zh_TW'
+    - name: 'Magyar'
+      key: 'hu'
 
 port:         4478
 
@@ -116,6 +118,14 @@ translations:
     themes:       '佈景主題'
     translations: '翻譯'
     help:         '說明'
+  hu:
+    site_title:   'Ghost Guide'
+    installation: 'Installation'
+    usage:        'Usage'
+    email:        'Email'
+    themes:       'Themes'
+    translations: 'Translations'
+    help:         'Help'
 
 # If running locally, simply comment out the line below to make all urls relative
 
