Fix package.json scripts to be more in line with expected behavior of npm packages
fixes #1053

- updates travis config to be more in line with
 current dev steps

- fix `grunt-cli` warning from appearing when
 running grunt

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "main": "./core/index",
     "scripts": {
         "start": "node index",
-        "test": "./node_modules/.bin/grunt validate --verbose",
-        "install": "bundle install && grunt init"
+        "test": "./node_modules/.bin/grunt validate --verbose"
     },
     "engines": {
         "node": "~0.10.0"
