--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "devDependencies": {
         "blanket": "~1.1.5",
         "grunt": "~0.4.1",
+        "grunt-ember-templates": "~0.4.18",
         "grunt-cli": "~0.1.13",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-compress": "~0.5.2",
