--- a/package.json
+++ b/package.json
@@ -66,12 +66,12 @@
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-copy": "~0.4.1",
         "grunt-contrib-handlebars": "~0.6.0",
+        "grunt-contrib-jshint": "~0.8.0",
         "grunt-contrib-sass": "~0.5.0",
         "grunt-contrib-uglify": "~0.2.5",
         "grunt-contrib-watch": "~0.5.3",
         "grunt-express-server": "~0.4.11",
         "grunt-groc": "~0.4.0",
-        "grunt-jslint": "~1.1.1",
         "grunt-mocha-cli": "~1.4.0",
         "grunt-shell": "~0.6.1",
         "grunt-update-submodules": "~0.2.1",
