--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "grunt": "~0.4.1",
         "grunt-ember-templates": "~0.4.18",
         "grunt-cli": "~0.1.13",
+        "grunt-concat-sourcemap": "~0.4.0",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-compress": "~0.5.2",
         "grunt-contrib-concat": "~0.3.0",
@@ -70,6 +71,7 @@
         "grunt-contrib-sass": "~0.5.0",
         "grunt-contrib-uglify": "~0.2.5",
         "grunt-contrib-watch": "~0.5.3",
+        "grunt-es6-module-transpiler": "~0.6.0",
         "grunt-express-server": "~0.4.11",
         "grunt-groc": "~0.4.0",
         "grunt-jslint": "~1.1.1",
