--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
         "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#9805033c178e7f857f801359664adb599444b430",
         "fastclick": "1.0.0",
         "handlebars": "~1.1.2",
+        "ic-ajax": "1.0.1",
         "iCheck": "1.0.1",
         "jquery": "1.11.0",
         "jquery-file-upload": "9.5.6",
