Switch to bower for client assets.
fixes #2272
- Remove libraries from shared/vendor
- Remove libraries from client/assets/vendor
- Add bower to package.json and postinstall
- Add bower.json with dependencies
- Add scripts from bower_components to concat/uglify
- Fix tests
- Serve jquery from /ghost/built/theme/

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "main": "./core/index",
     "scripts": {
         "start": "node index",
-        "test": "./node_modules/.bin/grunt validate --verbose"
+        "test": "./node_modules/.bin/grunt validate --verbose",
+        "postinstall": "bower install"
     },
     "engines": {
         "node": "~0.10.0"
@@ -59,6 +60,7 @@
     },
     "devDependencies": {
         "blanket": "~1.1.5",
+        "bower": "~1.2.8",
         "grunt": "~0.4.1",
         "grunt-cli": "~0.1.13",
         "grunt-contrib-clean": "~0.5.0",
