Remove unused libraries.
refs #2326
- Remove unused libraries from core/client/assets/vendor/
- Add folder to .gitignore
- bower install is now handled by grunt init

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ projectFilesBackup
 /core/client/tpl/hbs-tpl.js
 /core/client/assets/css
 .sass-cache/
+/core/client/assets/vendor
 /core/client/assets/sass/config.rb
 /core/client/assets/sass/layouts/config.rb
 /core/client/assets/sass/modules/config.rb
