_config.yml atualization

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ translations:
     upgrading:    'Aktualisieren' 
     troubleshooting: 'Problembehebung'
     configuration: 'Konfiguration'
-    faq: 'FAQ'
+    faq:'FAQ'
     managing: 'Verwalten'
     settings: 'Einstellungen'
     writing: 'Schreiben'
@@ -122,9 +122,20 @@ translations:
     site_title:   'Guia Ghost'
     installation: 'Instalação'
     usage:        'Uso'
-    email:        'Email'
+    email:        'E-mail'
     themes:       'Temas'
+    translations: 'Traduções'
     help:         'Ajuda'
+    deploy:       'Deploy'
+    upgrading:    'Atualização' 
+    troubleshooting: 'Solução de Problemas'
+    configuration:   'Configuração'
+    faq:          'FAQ'
+    managing:     'Gestão'
+    settings:     'Configurações'
+    writing:      'Escrita'
+    back:         'Anterior'
+    next:         'Proximo'
 
 # If running locally, simply comment out the line below to make all urls relative
 
