Replace SASS with assets from Ghost-UI
closes #2368
- Remove Ruby dependency (Gemfiles)
- Remove sass/fonts from core/client/assets/
- Add copy task to Gruntfile to copy over ghost-ui assets
- Install Ghost-UI via bower
- Changed .npmignore/.gitignore
- Remove grunt-contrib-sass dependency
- Remove mentions of Ruby in CONTRIBUTING.md

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
         "codemirror": "3.15.0",
         "Countable": "2.0.2",
         "fastclick": "1.0.0",
+        "ghost-ui": "0.1.0",
         "handlebars.js": "1.0.0",
         "iCheck": "1.0.1",
         "jquery": "1.11.0",
