--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
         "Countable": "2.0.2",
         "fastclick": "1.0.0",
         "ghost-ui": "0.1.0",
-        "handlebars.js": "1.0.0",
-        "iCheck": "1.0.1",
+        "handlebars": "1.3.0",
         "jquery": "1.11.0",
         "jquery-file-upload": "9.5.6",
         "jquery-hammerjs": "1.0.1",
