--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
         "sqlite3": "2.2.0",
         "unidecode": "0.1.3",
         "validator": "3.4.0",
-        "when": "2.7.0"
+        "when": "2.7.0",
+        "xml": "0.0.12"
     },
     "optionalDependencies": {
         "mysql": "2.1.1"
@@ -77,6 +78,7 @@
         "grunt-update-submodules": "~0.2.1",
         "matchdep": "~0.3.0",
         "mocha": "~1.15.1",
+        "nock": "0.27.2",
         "rewire": "~2.0.0",
         "request": "~2.29.0",
         "require-dir": "~0.1.0",
