--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ projectFilesBackup
 /core/clientold/assets/fonts
 /core/clientold/assets/vendor
 /core/client/assets/css
+!/core/client/assets/css/ember-hacks.css
 /core/client/assets/fonts
 /core/server/data/export/exported*
 /docs
