--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "express": "3.4.6",
         "express-hbs": "0.7.9",
         "fs-extra": "0.8.1",
-        "knex": "0.5.0",
+        "knex": "0.5.8",
         "lodash": "2.4.1",
         "moment": "2.4.0",
         "node-polyglot": "0.3.0",
@@ -55,7 +55,7 @@
         "when": "2.7.0"
     },
     "optionalDependencies": {
-        "mysql": "2.0.0-alpha9"
+        "mysql": "2.1.1"
     },
     "devDependencies": {
         "blanket": "~1.1.5",
