Fixed defulat to be in line with moment, and renamed offset

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -63,7 +63,7 @@
             }
         },
         "timezone":{
-            "defaultValue":"00:00"
+            "defaultValue":"+0000"
         }
     },
     "theme": {
