--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
         "lodash": "2.4.1",
         "moment": "2.4.0",
         "nprogress": "0.1.2",
-        "showdown": "0.3.1",
+        "showdown": "git://github.com/ErisDS/showdown.git#ghost",
         "validator-js": "3.4.0"
     }
 }
