--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "nodemailer": "0.5.13",
         "rss": "0.2.1",
         "semver": "2.2.1",
-        "showdown": "git://github.com/ErisDS/showdown.git#ghost",
+        "showdown": "git://github.com/ErisDS/showdown.git#v0.3.2-ghost",
         "sqlite3": "2.2.0",
         "unidecode": "0.1.3",
         "validator": "3.4.0",
