Update Ember to 1.5.0 and Ember resolver and handlebars to 1.3.0
no related issue

--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,11 @@
         "backbone": "1.0.0",
         "codemirror": "3.15.0",
         "Countable": "2.0.2",
-        "ember": "~1.4.0",
-        "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#9805033c178e7f857f801359664adb599444b430",
+        "ember": "1.5.0",
+        "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#181251821cf513bb58d3e192faa13245a816f75e",
         "fastclick": "1.0.0",
         "ghost-ui": "0.1.2",
-        "handlebars": "~1.1.2",
+        "handlebars": "1.3.0",
         "ic-ajax": "1.0.1",
         "jquery": "1.11.0",
         "jquery-file-upload": "9.5.6",
