--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,7 @@ jobs:
             any-code:
               - '!**/*.md'
             tinybird:
+              - *shared
               - 'ghost/tinybird/**/*.datasource'
               - 'ghost/tinybird/**/*.pipe'
 
@@ -963,7 +964,7 @@ jobs:
     ]
     defaults:
       run:
-        working-directory: ${{ inputs.data_project_dir }}/ghost/tinybird
+        working-directory: ghost/tinybird
     if: needs.job_setup.outputs.changed_tinybird == 'true'
 
     steps:
@@ -1106,7 +1107,6 @@ jobs:
           else
             echo "Skipping clean up: The Branch '$BRANCH_NAME' does not exist."
           fi
-
 
   job_required_tests:
     name: All required tests passed or skipped
