try a non-built-in token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Validate input
         run: |
-          [[ "${{ secrets.GITHUB_TOKEN }}" ]] || { echo "Missing github token"; }
+          [[ "${{ secrets.NPM_TOKEN }}" ]] || { echo "Missing NPM token"; }
           [[ "${{ secrets.TB_ADMIN_TOKEN }}" ]] || { echo "Missing admin token";  }
 
       - name: Get metadata (push)
