--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -979,9 +979,28 @@ jobs:
           python-version: "3.11"
           architecture: "x64"
           cache: 'pip'
+
+      - name: Get User Permission
+        id: checkAccess
+        uses: actions-cool/check-user-permission@v2
+        with:
+          require: write
+          username: ${{ github.triggering_actor }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check User Permission
+        if: steps.checkAccess.outputs.require-result == 'false'
+        run: |
+          echo "${{ github.triggering_actor }} does not have permissions on this repo."
+          echo "Current permission level is ${{ steps.checkAccess.outputs.user-permission }}"
+          echo "Job originally triggered by ${{ github.actor }}"
+          exit 1
+
+
       - name: Validate input
         run: |
-          [[ "${{ secrets.TB_ADMIN_TOKEN }}" ]] || { echo "Go to the tokens section in your Workspace, copy the 'admin token' and set TB_ADMIN_TOKEN as a Secret in your Git repository"; exit 1; }
+          [[ "$TB_ADMIN_TOKEN" ]] || { echo "Missing TB_ADMIN_TOKEN"; exit 1; }
+          [[ "$TB_HOST" ]] || { echo "Missing TB_HOST"; exit 1; }
 
       - name: Set environment variables
         run: |
