Updated path and title matching

--- a/apps/admin-x-activitypub/tsconfig.json
+++ b/apps/admin-x-activitypub/tsconfig.json
@@ -23,6 +23,7 @@
     /* Path aliases */
     "baseUrl": "./src",
     "paths": {
+      "@src/*": ["*"],
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@hooks/*": ["hooks/*"],
