--- a/ghost/post-revisions/package.json
+++ b/ghost/post-revisions/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "yarn build:ts",
     "build:ts": "tsc",
+    "build:watch": "tsc --watch --preserveWatchOutput",
     "test:types": "tsc --noEmit",
     "test:unit": "NODE_ENV=testing c8 --src src --all --check-coverage --100  --reporter text --reporter cobertura -- mocha --reporter dot -r ts-node/register './test/**/*.test.ts'",
     "test": "yarn test:unit && yarn test:types",
