--- a/ghost/custom-fonts/package.json
+++ b/ghost/custom-fonts/package.json
@@ -39,5 +39,8 @@
     "ts-node": "10.9.2",
     "typescript": "5.6.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "nx": {
+    "tags": ["typescript"]
+  }
 }
