--- a/ghost/post-revisions/package.json
+++ b/ghost/post-revisions/package.json
@@ -7,9 +7,9 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "dev": "tsc --watch --preserveWatchOutput --sourceMap",
     "build": "yarn build:ts",
     "build:ts": "tsc",
-    "build:watch": "tsc --watch --preserveWatchOutput",
     "test:types": "tsc --noEmit",
     "test:unit": "NODE_ENV=testing c8 --src src --all --check-coverage --100  --reporter text --reporter cobertura -- mocha --reporter dot -r ts-node/register './test/**/*.test.ts'",
     "test": "yarn test:unit && yarn test:types",
@@ -25,5 +25,8 @@
     "mocha": "10.2.0",
     "sinon": "15.2.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "nx": {
+    "tags": ["typescript"]
+  }
 }
