Allowed TypeScript code into core
fix https://linear.app/ghost/issue/ENG-2060/allow-typescript-code-into-core

- up until now, we've had to put our TypeScript code into separate
  packages, because `ghost/core` did not support TypeScript
- since then, we've had experience with tsx, which allows us to run
  TypeScripe and JavaScript seemlessly together
- with the change to move all our component packages into Ghost core, we
  need to move the TypeScript too, hence why this is useful
- this commit adds tsx into `ghost/core`, and configures eslint + mocha
  to use this
- it also fixes a Node compatibility issue in CI (v4 does not support
  Node 20 and we need to run `yarn archive`)
- this also adds tsconfig.json, which allows tsx and tsc to use the same
  settings
- to keep tsc happy (it requires at least one .ts file), I've included a demo.ts
  file, but I'll remove that once I migrate some real code
- finally, it ensures we build the TypeScript code at the point of
  packaging, as we only want to ship JS code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -831,7 +831,7 @@ jobs:
         env:
           FORCE_COLOR: 0
         with:
-          node-version: '16.14.0'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install Ghost-CLI
         run: npm install -g ghost-cli@latest
@@ -843,11 +843,17 @@ jobs:
 
       - run: node .github/scripts/bump-version.js canary
 
-      - run: npm pack
-        working-directory: ghost/core
+      - run: yarn archive
 
       - run: mv ghost-*.tgz ghost.tgz
         working-directory: ghost/core
+
+      - name: Switch back to Node v16.14.0 (for v4)
+        uses: actions/setup-node@v4
+        env:
+          FORCE_COLOR: 0
+        with:
+          node-version: '16.14.0'
 
       - name: Install latest v4
         run: |
@@ -855,7 +861,8 @@ jobs:
           echo "V4_DIR=$DIR" >> $GITHUB_ENV
           ghost install v4 --local -d $DIR
 
-      - uses: actions/setup-node@v4
+      - name: Switch back to ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
         env:
           FORCE_COLOR: 0
         with:
